--- a/decode-rs/Cargo.toml
+++ b/decode-rs/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = { version = "0.4.17" }
+serde = { version = "1.0", features = [ "derive" ] }
+serde_json = { version = "1.0" }
