--- a/node-server/Cargo.toml
+++ b/node-server/Cargo.toml
@@ -7,3 +7,16 @@ edition = "2021"
 
 [dependencies]
 decode-rs = { path = "../decode-rs" }
+
+rocket = { version = "0.5.0-rc.2" }
+figment = { version = "0.10.6", features = ["toml"] }
+serde = { version = "1.0.146" }
+tokio = { version = "1.21.2" }
+uuid = { version = "0.8", features = [ "serde", "v4" ] }
+reqwest = { version = "0.11" }
+hex = { version = "0.4.3" }
+sha3 = { version = "0.10.5" }
+reed-solomon-erasure = { version = "6.0.0" }
+log = { version = "0.4.17" }
+fern = { version = "0.6.1" }
+chrono = { version = "0.4.22" }
