--- a/apidoc/coordinator.yaml
+++ b/apidoc/coordinator.yaml
@@ -98,21 +98,56 @@ components:
         object_size:
           type: integer
           format: int64
-          description: Size of the object in bytes
+          description: Size of the object in bytes (in this example, ~38.13GB)
+          example: 38131289164
         chunk_size:
           type: integer
           format: int64
-          description: Size of each chunk in bytes
+          description: |
+            Size of each chunk in bytes (in this example, ~498MB)
+
+            The number of chunks in an object can be calculated as
+
+                chunk_count = ceil(object_size / chunk_size)
+
+            . Chunks are evenly distributed over the entire object, and the
+            start address of a chunk `i` can be calculated as
+
+                chunk_start = i * chunk_size
+
+            . In case `object_size` is not evenly divisible by `chunk_size`,
+            the last chunk may be smaller than `chunk_size`, its size can
+            be calculated as `object_size mod chunk_size`.
+          example: 522346426
         shard_size:
           type: integer
           format: int64
-          description: Size of each shard in bytes
+          description: |
+            Size of each shard in bytes (in this example, ~49MB)
+
+            The number of shards in a chunk can be calculated as
+
+                shard_count = ceil(chunk_size / shard_size)
+
+            . Shards are evenly distributed over a chunk, and the
+            start address of a shard `i` can be calculated as
+
+                shard_start = i * shard_size
+
+            . In case `chunk_size` is not evenly divisible by `shard_size`,
+            the last shard may be smaller than `shard_size`, its size can
+            be calculated as `chunk_size mod shard_size`. For purposes of
+            parity shard calculation and reconstruction, the last chunk is to
+            be padded to the full `shard_size` with null-bytes.
+          example: 52234642
         code_ratio_data:
           type: integer
           description: Number of data shards per chunk
+          example: 10
         code_ratio_parity:
           type: integer
           description: Number of parity shards per chunk
+          example: 4
         shard_map:
           type: array
           items:
@@ -151,21 +186,56 @@ components:
         object_size:
           type: integer
           format: int64
-          description: Size of the object in bytes
+          description: Size of the object in bytes (in this example, ~38.13GB)
+          example: 38131289164
         chunk_size:
           type: integer
           format: int64
-          description: Size of each chunk in bytes
+          description: |
+            Size of each chunk in bytes (in this example, ~498MB)
+
+            The number of chunks in an object can be calculated as
+
+                chunk_count = ceil(object_size / chunk_size)
+
+            . Chunks are evenly distributed over the entire object, and the
+            start address of a chunk `i` can be calculated as
+
+                chunk_start = i * chunk_size
+
+            . In case `object_size` is not evenly divisible by `chunk_size`,
+            the last chunk may be smaller than `chunk_size`, its size can
+            be calculated as `object_size mod chunk_size`.
+          example: 522346426
         shard_size:
           type: integer
           format: int64
-          description: Size of each shard in bytes
+          description: |
+            Size of each shard in bytes (in this example, ~49MB)
+
+            The number of shards in a chunk can be calculated as
+
+                shard_count = ceil(chunk_size / shard_size)
+
+            . Shards are evenly distributed over a chunk, and the
+            start address of a shard `i` can be calculated as
+
+                shard_start = i * shard_size
+
+            . In case `chunk_size` is not evenly divisible by `shard_size`,
+            the last shard may be smaller than `shard_size`, its size can
+            be calculated as `chunk_size mod shard_size`. For purposes of
+            parity shard calculation and reconstruction, the last chunk is to
+            be padded to the full `shard_size` with null-bytes.
+          example: 52234642
         code_ratio_data:
           type: integer
           description: Number of data shards per chunk
+          example: 10
         code_ratio_parity:
           type: integer
           description: Number of parity shards per chunk
+          example: 4
         shard_map:
           type: array
           items:
@@ -188,7 +258,7 @@ components:
         signature:
           type: string
           description: Opaque Signature of request
-        
+
   securitySchemes:
     bearerAuth:
       type: http
