--- a/decode-rs/Cargo.toml
+++ b/decode-rs/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 log = { version = "0.4.17" }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = { version = "1.0" }
+uuid = { version = "0.8", features = [ "serde" ] }
