--- a/coord/requirements.txt
+++ b/coord/requirements.txt
@@ -1,15 +1,37 @@
 alembic==1.8.1
+aniso8601==9.0.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
+Cython==0.29.32
 Flask==2.2.2
+Flask-API==3.0.post1
 Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
+Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.0
+idna==3.4
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.2.0
+llvmlite==0.39.1
 Mako==1.2.3
 MarkupSafe==2.1.1
+networkx==2.8.6
+numba==0.56.3
+numpy==1.23.3
 psycopg2-binary==2.9.5
+pytz==2022.5
+requests==2.28.1
+scapy==2.5.0rc1
+scikit-learn==1.1.2
+scipy==1.9.2
+six==1.16.0
 SQLAlchemy==1.4.42
+threadpoolctl==3.1.0
+tslearn==0.5.2
+urllib3==1.26.12
 Werkzeug==2.2.2
 zipp==3.10.0
