--- a/coord/requirements.txt
+++ b/coord/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.8.1
 click==8.1.3
+f==0.0.1
 Flask==2.2.2
+Flask-API==3.0.post1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.0
@@ -10,6 +12,7 @@ Jinja2==3.1.2
 Mako==1.2.3
 MarkupSafe==2.1.1
 psycopg2-binary==2.9.5
+six==1.16.0
 SQLAlchemy==1.4.42
 Werkzeug==2.2.2
 zipp==3.10.0
