--- a/decode-rs/Cargo.toml
+++ b/decode-rs/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 log = { version = "0.4.17" }
+reqwest = { version = "0.11.12", features = [ "json" ] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = { version = "1.0" }
 uuid = { version = "0.8", features = [ "serde" ] }
