--- a/decode-rs/Cargo.toml
+++ b/decode-rs/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 log = { version = "0.4.17" }
+reqwest = { version = "0.11.12", features = ["json", "stream"] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = { version = "1.0" }
+tokio = "1.21.2"
+tokio-util = "0.7.4"
 uuid = { version = "0.8", features = [ "serde" ] }
