apidoc/coord: fix register api

--- a/apidoc/coordinator.yaml
+++ b/apidoc/coordinator.yaml
@@ -99,24 +99,27 @@ paths:
         '200':
           description: Object uploaded
   
-  /v0/node:
-    post:
+  /v0/node/{nodeid}:
+    put:
       summary: Register a new node
       security:
         - bearerAuth: []
+      parameters:
+        - name: nodeid
+          in: path
+          required: true
+          description: UUID of node
+          schema:
+            type: string
       requestBody:
         content:
           application/json:
             schema:
               type: object
               required:
-                - node_id
                 - node_url
                 - shards
               properties:
-                node_id:
-                  type: string
-                  description: UUID of node
                 node_url:
                   type: string
                   description: URL of node
