--- a/coord/config.toml
+++ b/coord/config.toml
@@ -5,3 +5,7 @@ parity_shards = 2
 [shard_size] # in Bytes
 max_shard_size = 52428800 # 50MB
 min_shard_size = 5242880
+[liveness_check] 
+liveness_report_period = 60  # how often coord fetches report from nodes
+stats_timeout = 15
+report_miss_before_down = 3  # how many reports nodes can miss before coord thinks it is down
