node-server: implement node registration upon startup

--- a/node-server/Cargo.toml
+++ b/node-server/Cargo.toml
@@ -19,3 +19,5 @@ reed-solomon-erasure = { version = "6.0.0" }
 log = { version = "0.4.17" }
 fern = { version = "0.6.1" }
 chrono = { version = "0.4.22" }
+async-walkdir = "0.2.0"
+futures = { version = "0.3.25", default-features = false }
