--- a/coord/config.toml
+++ b/coord/config.toml
@@ -6,6 +6,6 @@ parity_shards = 2
 max_shard_size = 52428800 # 50MB
 min_shard_size = 5242880
 [liveness_check] 
-liveness_report_period = 60  # how often coord fetches report from nodes
-stats_timeout = 15
+liveness_report_period = 10  # how often coord fetches report from nodes
+stats_timeout = 5            # timeout for stats request
 report_miss_before_down = 3  # how many reports nodes can miss before coord thinks it is down
