--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,10 +10,13 @@ clap = { version = "4.0.19", features = ["derive"] }
 decode-rs = { path = "../decode-rs" }
 exitcode = "1.1.2"
 futures = "0.3.25"
+hex = "0.4.3"
+itertools = "0.10.5"
 log = "0.4.17"
 reed-solomon-erasure = { version = "6.0.0", features = ["simd-accel"] }
 reqwest = { version = "0.11.12", features = ["stream"] }
 simple_logger = "4.0.0"
 tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs"] }
 tokio-util = "0.7.4"
+uuid = { version = "0.8", default-features = false }
 
