--- a/decode-rs/Cargo.toml
+++ b/decode-rs/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures-util = "0.3.25"
+hex = "0.4.3"
 log = { version = "0.4.17" }
 reqwest = { version = "0.11.12", features = ["json", "stream"] }
 serde = { version = "1.0", features = [ "derive" ] }
