api/node: add ticket in reconstruction

--- a/apidoc/node-server.yml
+++ b/apidoc/node-server.yml
@@ -201,6 +201,7 @@ components:
               required:
                 - digest
                 - nodes
+                - ticket
               properties:
                 digest:
                   type: string
@@ -210,6 +211,9 @@ components:
                   items:
                     type: integer
                     description: NodeMap index
+                ticket:
+                  type: string
+                  description: Authorization ticket for node storing shards
         node_map:
           type: array
           items:
