--- a/decode-rs/Cargo.toml
+++ b/decode-rs/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytes = "1.3.0"
 futures = { version = "0.3.25", default-features = false }
 futures-util = "0.3.25"
 hex = "0.4.3"
