--- a/node-server/Cargo.toml
+++ b/node-server/Cargo.toml
@@ -20,4 +20,6 @@ log = { version = "0.4.17" }
 fern = { version = "0.6.1" }
 chrono = { version = "0.4.22" }
 async-walkdir = "0.2.0"
-futures = { version = "0.3.25", default-features = false }
+futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
+rand = { version = "0.8.5", features = ["small_rng"] }
+bytes = "1.3.0"
