coord/app.py: disable reconstruction on nodes down

--- a/coord/config.toml
+++ b/coord/config.toml
@@ -9,3 +9,4 @@ min_shard_size = 5242880
 liveness_report_period = 10  # how often coord fetches report from nodes
 stats_timeout = 5            # timeout for stats request
 report_miss_before_down = 3  # how many reports nodes can miss before coord thinks it is down
+reconstruction = False
