--- a/node-server/Cargo.toml
+++ b/node-server/Cargo.toml
@@ -23,3 +23,6 @@ async-walkdir = "0.2.0"
 futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
 rand = { version = "0.8.5", features = ["small_rng"] }
 bytes = "1.3.0"
+fs2 = "0.4.3"
+procfs = { version = "0.14.2", default-features = false }
+fs_extra = "1.2.0"
