--- a/emulab-ansible/roles/client/tasks/main.yml
+++ b/emulab-ansible/roles/client/tasks/main.yml
@@ -2,3 +2,68 @@
   become: yes
   become_user: root
   command: touch /is-client
+
+- name: Copy the shared SSH private key for password-less login
+  copy:
+    src: /tmp/id_noise_bench
+    dest: /localdisk/localuser/.ssh/id_ed25519
+    mode: '0600'
+    force: true
+
+- name: Ensure python3 and related packages are installed
+  become: yes
+  become_user: root
+  apt:
+    name:
+      - python3
+      - python3-pip
+      - python3-dev
+      - python3-venv
+    state: present
+
+- name: Install Jupyter notebook and other Python dependencies
+  become: yes
+  become_user: root
+  pip:
+    name:
+      - notebook
+      - asyncssh
+      - numpy
+      - matplotlib
+    state: present
+
+- name: Ensure jupyter notebook directory exists
+  file:
+    path: /localdisk/localuser/notebooks
+    state: directory
+
+- name: Create jupyter notebook systemd service
+  become: yes
+  become_user: root
+  copy:
+    dest: "/etc/systemd/system/jupyter-notebook.service"
+    mode: "0744"
+    content: |
+      [Unit]
+      Description=Jupyter Notebook
+
+      [Service]
+      Type=simple
+      PIDFile=/run/jupyter.pid
+      WorkingDir=/localdisk/localuser
+      ExecStart=/usr/local/bin/jupyter-notebook --notebook-dir=/localdisk/localuser/notebooks --no-browser --NotebookApp.password='sha1:137775e93d29:ba64d3b78e089f0f779167242ddb080a05c42a84'
+      User=localuser
+      Group={{ group_id }}
+      Restart=always
+      RestartSec=10
+
+      [Install]
+      WantedBy=multi-user.target
+
+- name: Start the jupyter notebook service
+  become: yes
+  become_user: root
+  systemd:
+    name: jupyter-notebook
+    state: started
+    daemon_reload: true
